@@ -41,11 +41,11 @@ Things to do to release a new version of SCons:
 
 		ae_p scons.0
 
-		aede {15}
+		aede {90}
 
-		aerpass {15}
+		aerpass {90}
 
-		aeib {15}
+		aeib {90}
 
 		aeb
 
@@ -59,16 +59,16 @@ Things to do to release a new version of SCons:
 
 	START THE NEW BRANCH FOR RELEASE
 
-		aenbr -p scons.0 {90}
+		aenbr -p scons.0 {91}
 
-		aenc -p scons.0.{90}
+		aenc -p scons.0.{91}
 
                         Call it something like,
                         "Initialize the new branch for release."
                         Cause = internal_enhancement.
                         Exempt it from all tests (*_exempt = true).
 
-		ae_p scons.0.{90}
+		ae_p scons.0.{91}
 
 		aedb 100
 
@@ -153,16 +153,16 @@ Things to do to release a new version of SCons:
 		<your email>
 		cd incoming
 		bin
-		put scons-0.90-1.noarch.rpm
-		put scons-0.90-1.src.rpm
-		put scons-0.90.tar.gz
-		put scons-0.90.win32.exe
-		put scons-0.90.zip
-		put scons-local-0.90.tar.gz
-		put scons-local-0.90.zip
-		put scons-src-0.90.tar.gz
-		put scons-src-0.90.zip
-		put scons_0.90-1_all.deb
+		put scons-0.{91}-1.noarch.rpm
+		put scons-0.{91}-1.src.rpm
+		put scons-0.{91}.tar.gz
+		put scons-0.{91}.win32.exe
+		put scons-0.{91}.zip
+		put scons-local-0.{91}.tar.gz
+		put scons-local-0.{91}.zip
+		put scons-src-0.{91}.tar.gz
+		put scons-src-0.{91}.zip
+		put scons_0.{91}-1_all.deb
 
 	Create the new release at the SourceForge project page:
 
@@ -174,7 +174,7 @@ Things to do to release a new version of SCons:
 
 		=> Add Release
 
-		New release name:  0.90
+		New release name:  0.{91}
 
 		Cut-and-paste or upload the RELEASE.txt file.
 
@@ -191,12 +191,12 @@ Things to do to release a new version of SCons:
 
 		Edit the file info:
 
-			scons-0.90-1.noarch.rpm		Any	.rpm
-			scons-0.90-1.src.rpm		Any	Source .rpm
-			scons-0.90.tar.gz		Any	.gz
-			scons-0.90.win32.exe		i386	.exe (32-bit Windows)
-			scons-0.90.zip			Any	.zip
-			scons_0.90-1_all.deb		Any	.deb
+			scons-0.{91}-1.noarch.rpm	Any	.rpm
+			scons-0.{91}-1.src.rpm		Any	Source .rpm
+			scons-0.{91}.tar.gz		Any	.gz
+			scons-0.{91}.win32.exe		i386	.exe (32-bit Windows)
+			scons-0.{91}.zip		Any	.zip
+			scons_0.{91}-1_all.deb		Any	.deb
 
                 Click "Update/Refresh" for each file; this must be done
                 one at a time.
@@ -213,7 +213,7 @@ Things to do to release a new version of SCons:
 
 		=> Add Release
 
-		New release name:  0.90
+		New release name:  0.{91}
 
 		Cut-and-paste or upload the RELEASE.txt file.
 
@@ -230,8 +230,8 @@ Things to do to release a new version of SCons:
 
 		Edit the file info:
 
-			scons-local-0.90.tar.gz		Any	.gz
-			scons-local-0.90.zip   		Any	.zip
+			scons-local-0.{91}.tar.gz	Any	.gz
+			scons-local-0.{91}.zip   	Any	.zip
 
                 Click "Update/Refresh" for each file; this must be done
                 one at a time.
@@ -248,7 +248,7 @@ Things to do to release a new version of SCons:
 
 		=> Add Release
 
-		New release name:  0.90
+		New release name:  0.{91}
 
 		Cut-and-paste or upload the RELEASE.txt file.
 
@@ -265,8 +265,8 @@ Things to do to release a new version of SCons:
 
 		Edit the file info:
 
-			scons-src-0.90.tar.gz		Any	.gz
-			scons-src-0.90.zip   		Any	.zip
+			scons-src-0.{91}.tar.gz		Any	.gz
+			scons-src-0.{91}.zip   		Any	.zip
 
                 Click "Update/Refresh" for each file; this must be done
                 one at a time.
@@ -275,7 +275,7 @@ Things to do to release a new version of SCons:
 		Release Notice section.
 
 
-	Hide release {0.13} at the SourceForge download page:
+	Hide release {0.14} at the SourceForge download page:
 
 		Go to the Admin page
 
@@ -285,7 +285,7 @@ Things to do to release a new version of SCons:
 
 		=> Edit Releases
 
-		Release Name: {0.13}
+		Release Name: {0.14}
 
 		=> Edit This Release
 
@@ -302,7 +302,7 @@ Things to do to release a new version of SCons:
 
 		=> Edit Releases
 
-		Release Name: {0.13}
+		Release Name: {0.14}
 
 		=> Edit This Release
 
@@ -319,7 +319,7 @@ Things to do to release a new version of SCons:
 
 		=> Edit Releases
 
-		Release Name: {0.13}
+		Release Name: {0.14}
 
 		=> Edit This Release
 
@@ -329,7 +329,7 @@ Things to do to release a new version of SCons:
 
 
 
-	In the Bugs Tracker, add a Group for the new release (0.90)
+	In the Bugs Tracker, add a Group for the new release (0.91)
 
 
 
@@ -437,7 +437,7 @@ Things to do to release a new version of SCons:
 =======================
 Template describe-the-release section:
 
-IMPORTANT:  Release 0.90 contains the following interface changes:
+IMPORTANT:  Release 0.91 contains the following interface changes:
   - XXX
 
   See the release notes for more information about these changes.
@@ -461,7 +461,7 @@ Template scons-devel announcement:
 
 SConspirators--
 
-SCons alpha release 0.90 is now available for download.
+SCons alpha release 0.91 is now available for download.
 
 XXX Template describe-the-release section goes here XXX
 
@@ -472,7 +472,7 @@ release.
 =======================
 Template scons-users + scons-announce announcement:
 
-Version 0.90 of SCons has been released and is available for download
+Version 0.91 of SCons has been released and is available for download
 from the SCons web site:
 
 	http://www.scons.org/
@@ -505,7 +505,7 @@ SCons is a software construction tool (build tool, or make tool) written
 in Python.  It is based on the design which won the Software Carpentry
 build tool competition in August 2000.
 
-Version 0.90 of SCons has been released and is available for download
+Version 0.91 of SCons has been released and is available for download
 from the SCons web site:
 
 	http://www.scons.org/
