@@ -22,7 +22,7 @@
 # WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
 
-__revision__ = "test/midl.py 0.D013 2003/03/31 21:46:41 software"
+__revision__ = "__REVISION__"
 
 import TestSCons
 import sys
